@@ -6,6 +6,7 @@ import com.app.panama_trips.persistence.entity.District;
 import com.app.panama_trips.persistence.repository.DistrictRepository;
 import com.app.panama_trips.persistence.repository.ProvinceRepository;
 import com.app.panama_trips.presentation.dto.DistrictRequest;
+import com.app.panama_trips.presentation.dto.DistrictResponse;
 import com.app.panama_trips.service.implementation.DistrictService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -34,7 +35,7 @@ public class DistrictServiceTest {
     void getAllDistricts_shouldReturnAllDistricts() {
         // When
         when(districtRepository.findAll()).thenReturn(DataProvider.districtListsMock);
-        List<District> districtList = districtService.getAllDistricts();
+        List<DistrictResponse> districtList = districtService.getAllDistricts();
 
         // Then
         assertNotNull(districtList);
@@ -45,11 +46,11 @@ public class DistrictServiceTest {
     void getDistrictById_shouldReturnDistrictById() {
         // When
         when(districtRepository.findById(1)).thenReturn(Optional.of(DataProvider.districtAlmiranteMock));
-        District district = districtService.getDistrictById(1);
+        DistrictResponse district = districtService.getDistrictById(1);
 
         // Then
         assertNotNull(district);
-        assertEquals("Almirante", district.getName());
+        assertEquals("Almirante", district.name());
     }
 
     @Test
@@ -66,11 +67,11 @@ public class DistrictServiceTest {
     void getDistrictByName_shouldReturnDistrictByName() {
         // When
         when(districtRepository.findByName("Almirante")).thenReturn(Optional.of(DataProvider.districtAlmiranteMock));
-        District district = districtService.getDistrictByName("Almirante");
+        DistrictResponse district = districtService.getDistrictByName("Almirante");
 
         // Then
         assertNotNull(district);
-        assertEquals("Almirante", district.getName());
+        assertEquals("Almirante", district.name());
     }
 
     @Test
@@ -87,12 +88,12 @@ public class DistrictServiceTest {
     void getDistrictsByProvinceId_shouldReturnDistrictsByProvinceId() {
         // When
         when(districtRepository.findDistrictByProvinceId_Id(1)).thenReturn(DataProvider.districtListBocasMock);
-        List<District> districtList = districtService.getDistrictsByProvinceId(1);
+        List<DistrictResponse> districtList = districtService.getDistrictsByProvinceId(1);
 
         // Then
         assertNotNull(districtList);
         assertEquals(3, districtList.size());
-        assertEquals(1, districtList.get(0).getId());
+        assertEquals(1, districtList.getFirst().id());
     }
 
     @Test
@@ -103,11 +104,11 @@ public class DistrictServiceTest {
         when(districtRepository.save(any(District.class))).thenReturn(DataProvider.districtAlmiranteMock);
 
         // When
-        District district = districtService.saveDistrict(request);
+        DistrictResponse district = districtService.saveDistrict(request);
 
         // Then
         assertNotNull(district);
-        assertEquals("Almirante", district.getName());
+        assertEquals("Almirante", district.name());
     }
 
     @Test
@@ -145,11 +146,11 @@ public class DistrictServiceTest {
         when(districtRepository.save(any(District.class))).thenReturn(DataProvider.districtAlmiranteMock);
 
         // When
-        District district = districtService.updateDistrict(1, request);
+        DistrictResponse district = districtService.updateDistrict(1, request);
 
         // Then
         assertNotNull(district);
-        assertEquals("Almirante", district.getName());
+        assertEquals("Almirante", district.name());
     }
 
     @Test
